# opensource-lighthouse

./: .gitignore  README.md  README_en.md  main.py  page.py  pyproject.toml  utils.py
.github/workflows/: check-do-not-merge.yml  format-check.yaml  format-check.yml  update.yml
data/: repos.csv  teams.csv
data/display_data/: companies.csv
docs/: excluded-zh.md  excluded.md
opensource_lighthouse/: render.py
page/: 360.md  58同城.md  Amazon.md  Apple.md  Boeing.md  Buf.md  Canonical.md  Cloud Native Computing Foundation (CNCF).md  Cloudflare.md  Datawhale.md  Docker.md  Google.md  Grafana Labs.md  HashiCorp.md  Hugging Face.md  IBM.md  JetBrains.md  Jina AI.md  Kubernetes.md  LLVM Foundation.md  Meta.md  Microsoft.md  Netflix.md  OpenAI.md  Shopify.md  Sony.md  The Apache Software Foundation.md  Uber.md  Vercel.md  X.md  YY.md  七牛.md  京东.md  华为.md  去哪儿.md  哔哩哔哩.md  唯品会.md  字节跳动.md  小米.md  开放原子开源基金会.md  (+22 more)
page/en/: 360.md  58同城.md  Amazon.md  Apple.md  Boeing.md  Buf.md  Canonical.md  Cloud Native Computing Foundation (CNCF).md  Cloudflare.md  Datawhale.md  Docker.md  Google.md  Grafana Labs.md  HashiCorp.md  Hugging Face.md  IBM.md  JetBrains.md  Jina AI.md  Kubernetes.md  LLVM Foundation.md  Meta.md  Microsoft.md  Netflix.md  OpenAI.md  Shopify.md  Sony.md  The Apache Software Foundation.md  Uber.md  Vercel.md  X.md  YY.md  七牛.md  京东.md  华为.md  去哪儿.md  哔哩哔哩.md  唯品会.md  字节跳动.md  小米.md  开放原子开源基金会.md  (+22 more)
pages/: company.py  readme.py  repo.py
scripts/: format_teams.py
src/: format_teams.py
template/: company_en.tmpl  company_zh.tmpl  readme_en.tmpl  readme_zh.tmpl
