[tool.poetry]
name = "opensource-lighthouse"
version = "0.1.0"
description = ""
authors = ["Leslie Leung <lesily9@gmail.com>"]
readme = "README.md"
packages = [{include = "opensource_lighthouse"}]

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
pygithub = "^2.3.0"
pypinyin = "^0.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
